Add modify token description cli and api
